--- a/src/tabela.html
+++ b/src/tabela.html
@@ -6,11 +6,20 @@
     <title>Tabela wyników</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./assets/dnl-favicon.png" type="image/x-icon">
-    
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 
 <div class="wrapper">
+    <div class="bottom-nav">
+        <div id="returnBtn" class="container"><i class="fas fa-arrow-circle-left"></i></div>
+        <div class="container"></div>
+        <div class="container"></div>
+    </div>
+    <div class="sm-wrapper">
+        <a class="link" href="https://facebook.com/dietanaluzie"><i class="fab fa-facebook"></i></a>
+        <a class="link" href="https://instagram.com/dietanaluziepl"><i class="fab fa-instagram"></i></a>
+    </div>
     <div class="init-info">
         <h1 class="title">Tabela wyników</h1>
     </div>
@@ -21,9 +30,6 @@
     </div>
     <div class="table-wrapper">
         
-    </div>
-    <div class="nav-bottom-btns">
-        <button class="return-btn btn" id="returnBtn">Powrót</button>
     </div>
 </div>
 
