--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,28 @@
     <title>Memo game - Zagraj w grę</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./assets/dnl-favicon.png" type="image/x-icon">
-    
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 
 <div class="wrapper">
+    <div class="bottom-nav">
+        <div id="home" class="container"><i class="fas fa-home"></i></div>
+        <div id="resetBtn" class="container"></div>
+        <div id="showTable" class="container"><i class="fas fa-table"></i></div>
+    </div>
+    <div class="sm-wrapper">
+        <a class="link" href="https://facebook.com/dietanaluzie"><i class="fab fa-facebook"></i></a>
+        <a class="link" href="https://instagram.com/dietanaluziepl"><i class="fab fa-instagram"></i></a>
+    </div>
     <div class="init-info">
         <h1 class="title">Połącz dania w pary</h1>
         <span class="subtitle">Wykręć najlepszy czas</span>
-        <div class="logo-wrapper">
+        <div id="logoWrapper" class="logo-wrapper">
             <div class="logo-img"></div>
-            <div class="logo-title">Dieta na luzie</div>
+            <div class="logo-title">dietanaluzie.pl</div>
         </div>
         <button id="startGameBtn" class="start-game main-btn">Rozpocznij grę</button>
-        <button id="showTable" class="table-btn">Tabela wyników</button>
     </div>
 
     <div class="timer no-display">
