--- a/src/tabela.html
+++ b/src/tabela.html
@@ -17,8 +17,8 @@
         <div class="container"></div>
     </div>
     <div class="sm-wrapper">
-        <a class="link" href="https://facebook.com/dietanaluzie"><i class="fab fa-facebook"></i></a>
-        <a class="link" href="https://instagram.com/dietanaluziepl"><i class="fab fa-instagram"></i></a>
+        <a class="link" href="https://facebook.com/dietanaluzie" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a class="link" href="https://instagram.com/dietanaluziepl" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
     <div class="init-info">
         <h1 class="title">Tabela wyników</h1>
