--- a/src/koniec-gry.html
+++ b/src/koniec-gry.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./assets/dnl-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="wrapper">
     <div class="bottom-nav">
-        <div id="home" class="container"><i class="fas fa-home"></i></div>
         <div id="resetBtn" class="container"></div>
+        <div id="home" class="container"><i class="fas fa-home"></i></div>
         <div id="showTable" class="container"><i class="fas fa-table"></i></div>
     </div>
     <div class="sm-wrapper">
