--- a/src/tabela.html
+++ b/src/tabela.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     <div class="bottom-nav">
         <div id="returnBtn" class="container"><i class="fas fa-arrow-circle-left"></i></div>
-        <div class="container"></div>
+        <div id="home" class="container"><i class="fas fa-home"></i></div>
         <div class="container"></div>
     </div>
     <div class="sm-wrapper">
