refactoring and minor bugs

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo game - Zagraj w grę</title>
+    <title>Dieta na luzie - Zagraj w grę</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./assets/dnl-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -28,7 +28,7 @@
             <div class="logo-img"></div>
             <div class="logo-title">dietanaluzie.pl</div>
         </div>
-        <button id="startGameBtn" class="start-game main-btn">Rozpocznij grę</button>
+        <button id="startGameBtn" class="start-game main-btn">Rozpocznij</button>
     </div>
 
     <div class="timer no-display">
@@ -37,22 +37,22 @@
     </div>
 
     <div class="game-wrapper no-display">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
+        <div class="card hidden"></div>
     </div>
 
     <div class="form-wrapper no-display">
