added regulation description

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <div class="logo-img"></div>
             <div class="logo-title">dietanaluzie.pl</div>
         </div>
-        <button id="startGameBtn" class="start-game main-btn">Rozpocznij</button>
+        <button id="startGameBtn" class="start-game main-btn">Rozpocznij grę</button>
     </div>
 
     <div class="timer no-display">
