--- a/src/koniec-gry.html
+++ b/src/koniec-gry.html
@@ -45,6 +45,9 @@
             </div>
             <button class="save-data-btn" type="submit">Zapisz</button>
             <div id="containerInfo"></div>
+            <div class="regulation-description">
+                Wysyłając formularz zapisujesz się do mojego newslettera i wyrażasz zgodę na przesyłanie Ci informacji o nowościach, przepisach, produktach i usługach. Zgodę możesz w każdej chwili wycofać, a szczegóły związane z przetwarzaniem Twoich danych osobowych znajdziesz w <a href="https://dietanaluzie.pl/polityka-prywatnosci">polityce prywatności</a>.
+            </div>
         </form>
     </div>
 </div>
